--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./style/style.css">
     <title>Happy New Year</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="banner">
+         <p class="banner-title">Happy New Year</p>
+         <h3 class="banner-description">New Year Party Celebration</h3>
+        </div>
+    </header>
     <main></main>
     <footer></footer>
 </body>
