--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
          <h3 class="banner-description">New Year Party Celebration</h3>
         </div>
     </header>
-    <main></main>
+    <main>
+        <div class="section-one">
+            <h1 class="section-one-title">65% OFF</h1>
+            <p class="section-one-intro">OUR HOLIDAY DEALS ARE BETTER</p>
+            <h3 class="section-one-description">ALL CATEGORIES</h3>
+            <img src="./image/New Year Photo.png" alt=""class="section-one-pic">
+
+        </div>
+    </main>
     <footer></footer>
 </body>
 </html>
