copied image to folder

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <p class="section-one-intro">OUR HOLIDAY DEALS ARE BETTER</p>
             <h3 class="section-one-description">ALL CATEGORIES</h3>
             <img src="./image/New Year Photo.png" alt=""class="section-one-pic">
+        </div>
+        <div class="section-two">
 
         </div>
     </main>
