--- a/index.html
+++ b/index.html
@@ -30,6 +30,29 @@
                     <h6 class="section-three-title">THE BEST GIFTS</h6>
                     <h3 class="section-three-description">Our Awesome Portfolio</h3>
                     <p class="section-three-info">This is our Portfolio.You can find here different types of things with the best discount offers.Go and check.</p>
+                    <div class="section-three-row">
+                        <div class="column">
+                          <img src="./image/Rectangle 3.png" alt="" style="width:100%">
+                        </div>
+                        <div class="column">
+                          <img src="./image/Rectangle 4.png" alt="" style="width:100%">
+                        </div>
+                        <div class="column">
+                          <img src="./image/Rectangle 5.png" alt="" style="width:100%">
+                        </div>
+                      </div>
+                      <div class="section-three-row-two">
+                        <div class="column-two">
+                            <img src="./image/Rectangle 6.png" alt="" style="width:100%">
+                          </div>
+                          <div class="column-two">
+                            <img src="./image/Rectangle 7.png" alt="" style="width:100%">
+                          </div>
+                          <div class="column-two">
+                            <img src="./image/Rectangle 8.png" alt="" style="width:100%">
+                          </div>
+
+                      </div>
                 </div>
             </div>
                 
