--- a/index.html
+++ b/index.html
@@ -61,9 +61,23 @@
                               <input type="text" placeholder="user@gmail.com.." name="search" class="search-in">
                               <button type="submit" class="search-bun">Subscribe</button>
                             </form>
-                          </div>
-
+                        </div>
                        </div>
+                       <div class="round-row">
+                        <div class="column" >
+                          <h5>NEW BEST OFFER</h5>
+                          <h1>Coming Soon</h1>
+                          <p>We know what you all waiting for..</p>
+                        </div>
+                        <div class="column">
+                          <img src="./image/Ellipse 1.png" alt="" style="width:150px" class="round">
+                        </div>
+                        <div class="column" >
+                          <h1><b>2024</b></h1>
+                          <p>So we brings so many countless discounts for you all.Enjoy the new begining with the new year and us.</p>
+                          <img src="./image/Group 96.png" alt="">
+                        </div>
+                      </div>
                     <div>
                 </div>
             </div>
@@ -74,6 +88,8 @@
 
         
     </main>
-    <footer></footer>
+    <footer>
+        <h1>subscribers</h1>
+    </footer>
 </body>
 </html>
