--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
                         </div>
                        </div>
                        <div class="round-row">
-                        <div class="column" >
-                          <h5>NEW BEST OFFER</h5>
-                          <h1>Coming Soon</h1>
-                          <p>We know what you all waiting for..</p>
+                        <div class="left">
+                          <h5 class="left-one"><b>NEW BEST OFFER</b></h5>
+                          <h1 class="left-two">Coming Soon</h1>
+                          <p class="left-three">We know what you all waiting for..Find greatest offers & deals in  from our website. Enjoy exclusive deals, offers and discounts in a wide range.</p>
                         </div>
-                        <div class="column">
-                          <img src="./image/Ellipse 1.png" alt="" style="width:150px" class="round">
+                        <div class="round">
+                          <img src="./image/Ellipse 1.png" alt="" style="width:150px" >
                         </div>
-                        <div class="column" >
-                          <h1><b>2024</b></h1>
-                          <p>So we brings so many countless discounts for you all.Enjoy the new begining with the new year and us.</p>
+                        <div class="right" >
+                          <h1 class="right-one"><b>2024</b></h1>
+                          <p class="right-two">So we brings so many countless discounts for you all.Enjoy the new beginning with the new year and us.</p>
                           <img src="./image/Group 96.png" alt="">
                         </div>
                       </div>
