added final bonus-section

--- a/index.html
+++ b/index.html
@@ -52,17 +52,7 @@
                             <img src="./image/Rectangle 8.png" alt="" style="width:100%">
                           </div>
                       </div>
-                      <div class="section-subs">
-                        <img src="./image/Group 61.png" alt="" class="section-subs-pic">
-                        <h1 class="section-subs-title">Subscribe Newsletter</h1>
-                        <p class="section-subs-description">This newsletter is an email we will send to our subscribers to update them about our brand's latest products and services. We will  also share valuable industry news or blog posts or inform our subscribers about our discounts and offers.</p>
-                        <div class="search">
-                            <form action="/action_page.php">
-                              <input type="text" placeholder="user@gmail.com.." name="search" class="search-in">
-                              <button type="submit" class="search-bun">Subscribe</button>
-                            </form>
-                        </div>
-                       </div>
+                      
                        <div class="round-row">
                         <div class="left">
                           <h5 class="left-one"><b>NEW BEST OFFER</b></h5>
@@ -78,6 +68,29 @@
                           <img src="./image/Group 96.png" alt="">
                         </div>
                       </div>
+                      <div class="discount">
+                        <div class="bonus-one">
+                        <h6 class="bonus-one-intro">WHAT IS FUNCTIONAL</h6>
+                        <h1 class="bonus-one-title"><span class="extra">Holidays</span> Sale 50%</h1>
+                        <p class="bonus-one-des"><b>Happy Holidays. Thanks for being a loyal customer. To celebrate your special day, use our discount code to get 50% off your purchase, valid until midnight of january 31, 2024. Celebrate your new year with new discounts and so many offers. Once again happy new year.</b></p>
+                          
+                      </div>
+                      <div class="bonus-two">
+                        <img src="./image/Group 70.png" alt="" class="bonus-pic">
+                        <img src="./image/Group 75.png" alt="">
+                      </div>
+                      </div>
+                      <div class="section-subs">
+                        <img src="./image/Group 61.png" alt="" class="section-subs-pic">
+                        <h1 class="section-subs-title">Subscribe Newsletter</h1>
+                        <p class="section-subs-description">This newsletter is an email we will send to our subscribers to update them about our brand's latest products and services. We will  also share valuable industry news or blog posts or inform our subscribers about our discounts and offers.</p>
+                        <div class="search">
+                            <form action="/action_page.php">
+                              <input type="text" placeholder="user@gmail.com.." name="search" class="search-in">
+                              <button type="submit" class="search-bun">Subscribe</button>
+                            </form>
+                        </div>
+                       </div>
                     <div>
                 </div>
             </div>
